2009-03-19  Peter Bloomfield

	Build --without-esmtp

	* libbalsa/identity.h: typedef LibBalsaSmtpServer only if
	ENABLE_ESMTP.
	* libbalsa/libbalsa.h: include "libbalsa.h" instead of
	"smtp-server.h".

2006-03-19  Pawel Salek

	* libbalsa/imap/imap-handle.c: make IDLE startup asynchronous.
	* libbalsa/imap/imap_private.h: provide EAT_LINE macro.
	* libbalsa/imap/imap-commands.c: use it.

2009-03-13  Peter Bloomfield

	Offer libUnique as an alternative to BonoboActivation to ensure
	single instance.

	* configure.in: new option --with-unique=no.
	* src/Makefile.am: Bonobo files are conditional.
	* src/main.c: (main, balsa_main_check_new_messages,
	mw_message_received_cb, balsa_handle_automation_options):
	implement it.
	(balsa_init): Initialize Gtk only once, and check for error.

2009-03-11  Albrecht Dreß

	* libbalsa/rfc2445.c: (libbalsa_vcal_new_from_body): ignore
	nested description.
	* src/balsa-mime-widget-vcalendar.c: (balsa_vevent_widget): use
	GtkTextView to show wrapped description.

2009-03-11  Peter Bloomfield

	* libbalsa/address-book-ldap.c: (rfc_2254_escape): do not
	include gnome.h; use g_{new,free} instead of {malloc,free}.

2009-03-03  Peter Bloomfield

	Consistently initialize Gerror, and use g_clear_error when it
	helps.

	* libbalsa/gmime-stream-gio.c:
	* libbalsa/libbalsa-conf.c: (lbc_init), (lbc_sync):
	* libbalsa/mailbox_local.c: (lbm_local_save_tree):
	* libbalsa/source-viewer.c: (lbsv_app_set_menus):
	* src/ab-main.c: (get_main_menu), (main):
	* src/balsa-icons.c: (load_balsa_pixmap):
	* src/filter-edit-callbacks.c: (condition_dialog_response),
	(fe_dialog_response):
	* src/filter-run-callbacks.c: (fr_dialog_response):
	* src/main-window.c:
	* src/main.c: (main):
	* src/message-window.c: (message_window_new):
	* src/sendmsg-window.c: (sendmsg_window_new):

2009-03-03  Peter Bloomfield

	* libbalsa/identity.c: free force-key-id.
	* src/balsa-icons.c: (load_balsa_pixmap): unref icon-set.