@@ -13,52 +13,42 @@ desktop_in_files = balsa.desktop.in
 desktop_DATA = balsa.desktop
 @INTLTOOL_DESKTOP_RULE@
 
-if BUILD_WITH_G_D_U
-EXTRA_DIST = \
-	balsa.1.in \
-	balsa.spec.in \
-	balsa.desktop.in \
+balsa_extra_dist =		\
+	balsa.1.in		\
+	balsa.spec.in		\
+	balsa.desktop.in	\
 	intltool-extract.in	\
 	intltool-merge.in	\
 	intltool-update.in	\
-	gnome-balsa2.png \
-	bootstrap.sh	\
-	mkinstalldirs	\
+	gnome-balsa2.png	\
+	bootstrap.sh		\
+	mkinstalldirs		\
 	HACKING			\
 	docs/mh-mail-HOWTO	\
 	docs/vconvert.awk	\
 	docs/pine2vcard		\
-	GNOME_Balsa.server.in	\
-	balsa-mail.lang		\
-	balsa-mail-style.xml	\
-	gnome-doc-utils.make
-
-else
-EXTRA_DIST = \
-	balsa.1.in \
-	balsa.spec.in \
-	balsa.desktop.in \
-	intltool-extract.in	\
-	intltool-merge.in	\
-	intltool-update.in	\
-	gnome-balsa2.png \
-	bootstrap.sh	\
-	mkinstalldirs	\
-	HACKING			\
-	docs/mh-mail-HOWTO	\
-	docs/vconvert.awk	\
-	docs/pine2vcard		\
-	GNOME_Balsa.server.in	\
 	balsa-mail.lang		\
 	balsa-mail-style.xml
-endif
-DISTCLEANFILES = $(desktop_DATA) $(server_DATA) \
-	intltool-extract intltool-merge intltool-update	\
-	gnome-doc-utils.make
 
-serverdir       = $(libdir)/bonobo/servers
-server_in_files = GNOME_Balsa.server
-server_DATA     = $(server_in_files:.server.in=.server)
+if BUILD_WITH_G_D_U
+balsa_g_d_u_extra_dist = gnome-doc-utils.make
+endif
+
+if !BUILD_WITH_UNIQUE
+balsa_server_extra_dist = GNOME_Balsa.server.in
+serverdir               = $(libdir)/bonobo/servers
+server_in_files         = GNOME_Balsa.server
+server_DATA             = $(server_in_files:.server.in=.server)
+
+$(server_in_files): $(server_in_files).in
+	sed -e "s|\@bindir\@|$(bindir)|" $< > $@
+
+endif
+
+EXTRA_DIST =			\
+    $(balsa_extra_dist)		\
+    $(balsa_g_d_u_extra_dist)	\
+    $(balsa_server_extra_dist)
 
 if BUILD_WITH_GTKSOURCEVIEW2
 gtksourceviewdir = $(BALSA_DATA_PREFIX)/gtksourceview-2.0
@@ -66,8 +56,9 @@ gtksourceview_DATA = balsa-mail.lang		\
 	balsa-mail-style.xml
 endif
 
-$(server_in_files): $(server_in_files).in
-	sed -e "s|\@bindir\@|$(bindir)|" $< > $@
+DISTCLEANFILES = $(desktop_DATA) $(server_DATA) \
+	intltool-extract intltool-merge intltool-update	\
+	gnome-doc-utils.make
 
 
 dist-hook: balsa.spec
